--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -5,3 +5,7 @@ body, .body {
 .template-label {
   font-size: 13px;
 }
+
+.text-small {
+  font-size: 10px;
+}
