--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -88,13 +88,10 @@
   }
 
   table[class="body"] .right-text-pad,
-  table[class="body"] .text-pad-right {
-    padding-left: 10px !important;
-  }
-
+  table[class="body"] .text-pad-right,
   table[class="body"] .left-text-pad,
   table[class="body"] .text-pad-left {
-    padding-right: 10px !important;
+    padding: 0 !important;
   }
 
   table[class="body"] .hide-for-small,
